[package]
name = "wgpu_challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "27.0" }
winit = { version = "0.30" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.32.0", features = ["rt"] }
